<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhiteTextDocIrs"
    >

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        >

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInstruccionesA"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:text="@string/instruccionesA"
            android:textColor="@color/colorPrimaryTextDocIrs"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/instruccionesa"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="30dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInstruccionesB"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/instruccionesB"
            android:textColor="@color/colorPrimaryTextDocIrs" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instruccionesb"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInstruccionesC"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/instruccionesC"
            android:textColor="@color/colorPrimaryTextDocIrs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInstruccionesD"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/instruccionesD"
            android:textColor="@color/colorPrimaryTextDocIrs" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instruccionesd"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInstruccionesE"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/instruccionesE"
            android:textColor="@color/colorPrimaryTextDocIrs" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/instruccionese"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/instruccionesf"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"/>

</LinearLayout>
</ScrollView>